# flux

./: Cargo.toml  NIXOS_LIKE_DESIGN.md  POLKIT_SETUP.md  README.md  ROADMAP.md  VERSIONING.md  taplo.toml
config/: config.toml.example
man/: dotfiles-manager.1  flux.1
schemas/: README.md  config.schema.json
src/: browser.rs  config.rs  dry_run.rs  error.rs  error_utils.rs  file_manager.rs  git.rs  logging.rs  main.rs  migrate.rs  profile.rs  prompt.rs  restore.rs  security.rs  status.rs  tests.rs  types.rs  untracked.rs  validate.rs
src/commands/: apply.rs  migrate.rs  mod.rs  packages.rs  restore.rs  services.rs  status.rs  untracked.rs  validate.rs
src/config/: cli.rs  mod.rs  profile.rs
src/services/: browser.rs  git.rs  mod.rs  package_manager.rs  service_manager.rs  transactions.rs
src/utils/: dry_run.rs  error.rs  error_utils.rs  mod.rs  path_utils.rs  prompt.rs  security.rs
tests/: file_operations_tests.rs
