[package]
name = "flux"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
colored = "2.1"
dialoguer = "0.11"
git2 = "0.18"
dirs = "5.0"
chrono = "0.4"
thiserror = "1.0"
pathdiff = "0.2"
walkdir = "2"
log = "0.4"
env_logger = "0.11"
nix = { version = "0.27", features = ["process", "fs"] }

[dev-dependencies]
tempfile = "3.8"
